<resources>
    <string name="app_name">扫码装箱</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Version</string>
    <string name="opticol">Opticol</string>
    <string name="symbol">Symbol</string>
    <string name="honyware">Honyware</string>
    <string name="se4500">Se4500</string>
    <string name="title_activity_main">扫码装箱</string>
    <string name="set_scanner_manager">连续模式</string>
    <string name="scanner">扫描</string>
     <string name="start">开始扫描</string>
      <string name="close">停止扫描</string>
    <string name="scanner_on">打开扫描电源</string>
    <string name="scanner_off">关闭扫描电源</string>
    <string name="scanner_keyboard_mode">键盘模式</string>
    <string name="scanner_keyboard_output">键盘输出</string>
    <string name="scanner_keyboard_output_summary">键盘输出扫描结果到焦点编辑框内</string>
    <string name="scanner_beep">提示音</string>
    <string name="scanner_beep_summary">扫描成功时播放声音</string>
    <string name="scanner_vibrate">振动</string>
    <string name="scanner_vibrate_summary">扫描成功时振动</string>
    <string name="scanner_enter">附加回车键</string>
    <string name="scanner_enter_summary">扫描结果后附加回车键</string>
    <string name="scanner_lock">扫描按键</string>
    <string name="scanner_lock_on">启用扫描按键</string>
    <string name="scanner_lock_off">关闭扫描按键</string>
    <string name="scanner_reset_def">重置扫描头</string>
    <string name="scanner_reset_def_summary">扫描头出厂设置</string>
    <string name="scanner_toast">扫描头重置完成!</string>
    <string name="scanner_hint">对准条码，按设备上扫描键获取条码</string>
    <string name="app_copyright">©masaic.net v1.1.2</string>
    <string name="app_setting">系统设置</string>
    <string name="app_upload">上传数据</string>
    <string name="app_save">保存设置</string>
    <string name="app_empty">清空当前箱数据</string>
    <string name="app_tips">粤语提示:</string>
    <string name="app_update">连接数据库/获取最新产品列表</string>
    <string name="app_search">请在此输入箱码或者产品码搜索</string>
    <string name="app_delete">删除当前最后一个码</string>
    <string name="app_btn_back">保存设置 返回扫码界面</string>
</resources>
