<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/padding_small">

    <Button
        android:id="@+id/app_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/app_delete" />

    <EditText
        android:id="@+id/scan_result"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="#00000000"
        android:cursorVisible="true"
        android:gravity="top"
        android:hint="@string/scanner_hint"
        android:minLines="5"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#B3B3B3" />

    <TextView
        android:id="@+id/app_curr_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_small"
        android:layout_marginTop="@dimen/padding_small"
        tools:text="当前装箱：1/3" />

    <TextView
        android:id="@+id/app_success_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_small"
        tools:text="已完成箱数：1 箱" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/app_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/padding_small"
            android:layout_weight="1"
            android:background="@color/bg"
            android:text="@string/app_setting"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/app_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_small"
            android:layout_weight="1"
            android:background="@color/bg_green"
            android:text="@string/app_upload"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_copyright"
        android:textColor="#AEAEAE" />

</LinearLayout>
