<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/padding_small">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_small"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="数据库链接网址：" />

        <EditText
            android:id="@+id/app_db"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/app_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_small"
        android:background="#3CBC2C"
        android:text="@string/app_save"
        android:textColor="#FFFFFF"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_small"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="接下来扫"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            android:entries="@array/spingarr"
        </Spinner>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_small">

        <TextView
            android:id="@+id/app_packing_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="装箱数量：0" />
    </LinearLayout>


    <Switch
        android:id="@+id/app_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_small"
        android:checked="false"
        android:text="@string/app_tips"
        android:textOff="关"
        android:textOn="开"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="温馨提示\n软硬件销售及报修\n电话：15905791993"
        android:textColor="#AEAEAE"
        android:textSize="16sp" />


    <!--<Button-->
        <!--android:id="@+id/app_empty"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="@dimen/padding_small"-->
        <!--android:background="#FE9834"-->
        <!--android:text="@string/app_empty"-->
        <!--android:textColor="#FFFFFF"-->
        <!--android:textSize="14sp" />-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_copyright"
        android:textColor="#AEAEAE" />
</LinearLayout>
